--- a/package.json
+++ b/package.json
@@ -11,22 +11,21 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^10.2.6",
-    "browser-sync": "^2.26.14",
+    "autoprefixer": "^10.4.0",
+    "browser-sync": "^2.27.7",
     "browser-sync-webpack-plugin": "^2.3.0",
     "cross-env": "^7.0.3",
-    "laravel-mix": "^6.0.18",
-    "postcss": "^8.3.5",
-    "resolve-url-loader": "^3.1.3",
-    "sass": "^1.32.12",
-    "sass-loader": "^11.0.1",
-    "tailwindcss": "^2.2.4"
+    "laravel-mix": "^6.0.39",
+    "postcss": "^8.3.11",
+    "resolve-url-loader": "^4.0.0",
+    "sass": "^1.43.4",
+    "sass-loader": "^12.3.0",
+    "tailwindcss": "^2.2.19"
   },
   "browserslist": [
-    "last 2 version",
-    "IE 11"
+    "last 2 version"
   ],
   "dependencies": {
-    "alpinejs": "^3.1.1"
+    "alpinejs": "^3.5.2"
   }
 }
